css/merge.css
@font-face {
	font-family: 'SF';
	src: url('../fonts/SF-UI-Display-Medium.woff') format('woff');
}
.header {
  background-color: #584595;
}
body {
  background-color: #F6F6F6;
}
.body {
  text-align: center;
  width: auto;
  display: inline-block;
  position: absolute;
  left: 50%;
  top: calc(50% + 30px);
  transform: translateX(-50%) translateY(-50%);
}
p {
  font-family: "SF";
  letter-spacing: 1.15px;
  line-height: 165%;
  font-size: 16px;
  color: #777777;
}
a {
	font-family: "SF";
   letter-spacing: 1.15px;
	text-decoration: none;
}
img {
  width: 130px;
  margin: 0 auto 0 auto;
  display: block;
}
#soon {
  display: inline-block;
  margin-top: 60px;
  border: solid 1.5px;
  padding: 10px 15px;
  color: #734dff;
}
#soon:hover {
	background-color: #734dff;
	color: #f6f6f6;
}
#message {
  width: 600px;
  margin-top: 60px;
  font-size: 18px;
}

/*---MOBILE---*/
@media screen and (max-width: 510px) {
    .body {
        width: calc(100% - 70px);
		  top:373px;
    }
    #message {
      width: 100%
    }
}

